<resources>
    <string name="app_name">UFFDC bank</string>
    <string name="todooooo">TODO</string>
    <string name="login">login</string>
    <string name="user_id">User id</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="error_occured_in_logging_in">ERROR OCCURED WHILE LOGGING IN..</string>
    <string name="todo">TODO</string>
    <string name="hhtodo">TODO</string>
    <string name="welcome_mohan">Welcome, Mohan</string>
    <string name="view_balance">View Balance</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="transaction_history">Transaction History</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="registerr">Register</string>
    <string name="toddo">TODO</string>
    <string name="register_for_the_mobile_banking_of_uffdc_bank_bellow">Register For the Mobile Banking of UFFDC Bank bellow !!!!!</string>
    <string name="union_of_farmers_finance_development_corporation_linited">UNION OF FARMERS FINANCE DEVELOPMENT CORPORATION LINITED.</string>
    <string name="search">Search</string>
    <string name="i_am_not_a_robot">I am not a robot</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="pan">PAN</string>
    <string name="dob">DOB</string>
    <string name="loggin">Login</string>
    <string name="exxit">Exit</string>
    <string name="error_occured_in_loggingg_in">Error occured in logging in!!</string>
    <string name="userr_id">USER ID</string>
    <string name="ph">ph</string>
    <string name="passsword">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reggister">Register</string>
    <string name="exxiit">Exit</string>
    <string name="picture_button">Take picture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eigenfaces">Eigenfaces</string>
    <string name="fisherfaces">Fisherfaces</string>
    <string name="threshold_face">Face threshold:</string>
    <string name="threshold_distance">Distance threshold:</string>
    <string name="maximum_images">Maximum number of images:</string>
    <string name="clear_button">Clear training set</string>
    <string name="flip">Flip</string>
</resources>