<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="#FFFDD0">

    <!-- Header -->

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="16dp">

        <!-- Bank Logo -->
        <ImageView
            android:id="@+id/imgBankLogo"
            android:layout_width="117dp"
            android:layout_height="92dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <!-- User Profile Image -->
        <ImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/smallhead"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/hhtodo" />

        <!-- Welcome Message -->
        <TextView
            android:id="@+id/textWelcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_mohan"
            android:textStyle="bold"
            android:textColor="#006400"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- View Balance Button -->
            <Button
                android:id="@+id/btnViewBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_balance"/>

            <!-- Transfer Money Button -->
            <Button
                android:id="@+id/btnTransferMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer_money"/>

            <!-- Show Transaction History Button -->
            <Button
                android:id="@+id/btnTransactionHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_history"/>

        </LinearLayout>
    </ScrollView>

    <!-- Footer -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <!-- Navigation buttons or other footer elements go here -->
    </RelativeLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/any_chart_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="99dp" />
</RelativeLayout>


